feat: Initial implementation of real-time notification system using SSE
- Created Notification DTO
- Implemented NotificationController
- Added basic SSE endpoint
- Created frontend HTML client

--- a/Nofitication/src/main/resources/application.properties
+++ b/Nofitication/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=Nofitication
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.check-template-location=true
